--- a/templates/hello_there.html
+++ b/templates/hello_there.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/styles.css') }}">
     </head>
     <body>
-        <h3>{{data.username}}</h3>
+        <h3>{{data.username}} (lazy wan to do calc for overtime, so u do yourself)</h3>
         <ul>
             <li>
                 <span><h3>April Pay: ${{'%0.2f'|format(data.aprilPay|float)}}</h3></span>
