--- a/templates/hello_there.html
+++ b/templates/hello_there.html
@@ -21,6 +21,21 @@
             <li>
                 <span><h3>July Pay: ${{'%0.2f'|format(data.julyPay|float)}}</h3></span>
             </li>
+            <li>
+                <span><h3>August Pay: ${{'%0.2f'|format(data.augPay|float)}}</h3></span>
+            </li>
+            <li>
+                <span><h3>September Pay: ${{'%0.2f'|format(data.sepPay|float)}}</h3></span>
+            </li>
+            <li>
+                <span><h3>October Pay: ${{'%0.2f'|format(data.octPay|float)}}</h3></span>
+            </li>
+            <li>
+                <span><h3>November Pay: ${{'%0.2f'|format(data.novPay|float)}}</h3></span>
+            </li>
+            <li>
+                <span><h3>December Pay: ${{'%0.2f'|format(data.decPay|float)}}</h3></span>
+            </li>
         </ul>
     </body>
 </html>
